--- a/mastermind.html
+++ b/mastermind.html
@@ -3,9 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mastermind</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    
+    <div id="game-container">
+        <div id="board">
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+                <div class="indicator">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="number">4</div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
