made demo markup

--- a/mastermind.html
+++ b/mastermind.html
@@ -14,35 +14,23 @@
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number">1</div>
+                        <div class="number">1</div>
+                        <div class="number">1</div>
+                        <div class="number">1</div>
+                    </div>
                 </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
-                </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number">1</div>
+                        <div class="number">1</div>
+                        <div class="number">1</div>
+                        <div class="number">1</div>
+                    </div>
                 </div>
             </div>
             <div class="board-row">
@@ -50,35 +38,23 @@
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
-                </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
             </div>
             <div class="board-row">
@@ -86,35 +62,23 @@
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
-                </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
             </div>
             <div class="board-row">
@@ -122,17 +86,23 @@
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
             </div>
             <div class="board-row">
@@ -140,17 +110,95 @@
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
                 <div class="color-slot"></div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
-                <div class="indicator">
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="number">4</div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
+                </div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
+                </div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="board-row">
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="color-slot"></div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
+                </div>
+                <div class="indicator-wrapper">
+                    <div class="handle"></div>
+                    <div class="indicator">
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                        <div class="number"></div>
+                    </div>
                 </div>
             </div>
             
