--- a/mastermind.html
+++ b/mastermind.html
@@ -8,200 +8,211 @@
 </head>
 <body>
     <div id="game-container">
-        <div id="board">
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number">1</div>
-                        <div class="number">1</div>
-                        <div class="number">1</div>
-                        <div class="number">1</div>
+        <div id="game-area">
+            <div id="board">
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
                     </div>
                 </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number">1</div>
-                        <div class="number">1</div>
-                        <div class="number">1</div>
-                        <div class="number">1</div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="board-row">
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="color-slot"></div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
+                    </div>
+                    <div class="indicator-wrapper">
+                        <div class="handle"></div>
+                        <div class="indicator">
+                            <div class="number">1</div>
+                            <div class="number">2</div>
+                            <div class="number">3</div>
+                            <div class="number">4</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
+        </div>
+        <div id="selection">
+            <div class="selection-row-body">
+                <div class="selection-row">
+                    <div class="color-slot selection-color"></div>
+                    <div class="color-slot selection-color"></div>
+                    <div class="color-slot selection-color"></div>
+                    <div class="color-slot selection-color"></div>
                 </div>
             </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="board-row">
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="color-slot"></div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-                <div class="indicator-wrapper">
-                    <div class="handle"></div>
-                    <div class="indicator">
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                        <div class="number"></div>
-                    </div>
-                </div>
-            </div>
-            
         </div>
     </div>
     <script src="js/main.js"></script>
